--- a/imports/ui/pages/clothes-add-page.html
+++ b/imports/ui/pages/clothes-add-page.html
@@ -2,24 +2,25 @@
 <template name="Clothes_add_page">
   <div class="container">
     <div class="card">
-    {{# autoForm collection=clothes id="insertClothForm" type="insert"}}
+    {{# autoForm collection=Clothes 
+    id="insertClothForm" type="insert"}}
       <fieldset>
         <legend>{{ getUpdateLegend }}</legend>
-        {{> afQuickField name='clothName'}}
-        {{> afQuickField name='clothType'}}
-        {{> afQuickField name='clothTheme'}}
-        {{> afQuickField name='clothColor'}}
-        {{> afQuickField name='clothGender'}}
-        {{> afQuickField name='clothSize'}}
-        {{> afQuickField name='clothDescr' rows=6}}
+        {{> afQuickField name='name'}}
+        {{> afQuickField name='type'}}
+        {{> afQuickField name='theme'}}
+        {{> afQuickField name='color'}}
+        {{> afQuickField name='gender'}}
+        {{> afQuickField name='size'}}
+        {{> afQuickField name='description' rows=6}}
         <p class="range-field">
-          {{> afQuickField name="clothPrice"}}
+          {{> afQuickField name="price"}}
         </p>
         {{> afQuickField name='disponibility'}}
         <div class="file-field input-field">
           <div class="btn">
             <span>File</span>
-            {{> afFieldInput disabled=waitingForApiResponse name='clothImage' type='file' id='fileInput'}}
+            {{> afFieldInput disabled=waitingForApiResponse name='image' type='file' id='fileInput'}}
           </div>
           <div class="file-path-wrapper">
             <input class="file-path validate" type="text" placeholder="Upload one file">
